--- a/Aula 13 - Desafio!.ipynb
+++ b/Aula 13 - Desafio!.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,212 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DataEmissao</th>\n",
-       "      <th>DataVencimento</th>\n",
-       "      <th>NFe</th>\n",
-       "      <th>cdCliente</th>\n",
-       "      <th>cdVendedor</th>\n",
-       "      <th>cdProduto</th>\n",
-       "      <th>QtdItens</th>\n",
-       "      <th>ValorUnitario</th>\n",
-       "      <th>Peso Líquido</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01-12</td>\n",
-       "      <td>2017-02-22</td>\n",
-       "      <td>1492762</td>\n",
-       "      <td>3140218</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1073</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8.83</td>\n",
-       "      <td>0.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01-12</td>\n",
-       "      <td>2017-02-22</td>\n",
-       "      <td>1492762</td>\n",
-       "      <td>3140218</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1420</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4.44</td>\n",
-       "      <td>5.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01-12</td>\n",
-       "      <td>2017-02-22</td>\n",
-       "      <td>1492762</td>\n",
-       "      <td>3140218</td>\n",
-       "      <td>265</td>\n",
-       "      <td>264</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>1.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01-13</td>\n",
-       "      <td>2017-01-29</td>\n",
-       "      <td>1492719</td>\n",
-       "      <td>2983332</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1154</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.92</td>\n",
-       "      <td>1.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-01-13</td>\n",
-       "      <td>2017-01-29</td>\n",
-       "      <td>1492719</td>\n",
-       "      <td>2983332</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1527</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.81</td>\n",
-       "      <td>1.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14243</th>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>2022-04-14</td>\n",
-       "      <td>2173547</td>\n",
-       "      <td>673190</td>\n",
-       "      <td>265</td>\n",
-       "      <td>202</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>1.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14244</th>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>2022-04-14</td>\n",
-       "      <td>2173547</td>\n",
-       "      <td>673190</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1154</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>1.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14245</th>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>2022-04-14</td>\n",
-       "      <td>2173547</td>\n",
-       "      <td>673190</td>\n",
-       "      <td>265</td>\n",
-       "      <td>668</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.26</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14246</th>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>2022-04-14</td>\n",
-       "      <td>2173547</td>\n",
-       "      <td>673190</td>\n",
-       "      <td>265</td>\n",
-       "      <td>1527</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.14</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14247</th>\n",
-       "      <td>2022-03-13</td>\n",
-       "      <td>2022-04-05</td>\n",
-       "      <td>2172961</td>\n",
-       "      <td>3771379</td>\n",
-       "      <td>215</td>\n",
-       "      <td>257</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4.42</td>\n",
-       "      <td>1.20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>302840 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      DataEmissao DataVencimento      NFe  cdCliente  cdVendedor  cdProduto  \\\n",
-       "0      2017-01-12     2017-02-22  1492762    3140218         265       1073   \n",
-       "1      2017-01-12     2017-02-22  1492762    3140218         265       1420   \n",
-       "2      2017-01-12     2017-02-22  1492762    3140218         265        264   \n",
-       "3      2017-01-13     2017-01-29  1492719    2983332         265       1154   \n",
-       "4      2017-01-13     2017-01-29  1492719    2983332         265       1527   \n",
-       "...           ...            ...      ...        ...         ...        ...   \n",
-       "14243  2022-03-12     2022-04-14  2173547     673190         265        202   \n",
-       "14244  2022-03-12     2022-04-14  2173547     673190         265       1154   \n",
-       "14245  2022-03-12     2022-04-14  2173547     673190         265        668   \n",
-       "14246  2022-03-12     2022-04-14  2173547     673190         265       1527   \n",
-       "14247  2022-03-13     2022-04-05  2172961    3771379         215        257   \n",
-       "\n",
-       "       QtdItens  ValorUnitario  Peso Líquido  \n",
-       "0             6           8.83          0.60  \n",
-       "1             6           4.44          5.40  \n",
-       "2            10           0.96          1.92  \n",
-       "3             6           2.92          1.26  \n",
-       "4             6           2.81          1.40  \n",
-       "...         ...            ...           ...  \n",
-       "14243        24           1.62          1.50  \n",
-       "14244        12           3.25          1.75  \n",
-       "14245        12           3.26          1.00  \n",
-       "14246        12           3.14          1.00  \n",
-       "14247         6           4.42          1.20  \n",
-       "\n",
-       "[302840 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Excel file format cannot be determined, you must specify an engine manually.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\FIC\\Documents\\Pedrosp\\Aula 13 - Desafio!.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FIC/Documents/Pedrosp/Aula%2013%20-%20Desafio%21.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Estrutura para combinar os arquivos\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FIC/Documents/Pedrosp/Aula%2013%20-%20Desafio%21.ipynb#W3sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m res:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/FIC/Documents/Pedrosp/Aula%2013%20-%20Desafio%21.ipynb#W3sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     df1 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(file)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FIC/Documents/Pedrosp/Aula%2013%20-%20Desafio%21.ipynb#W3sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     file_combined \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([file_combined, df1])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FIC/Documents/Pedrosp/Aula%2013%20-%20Desafio%21.ipynb#W3sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m dir_final \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mUsers\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mFIC\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mDocuments\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mPedrosp\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m003 - Arquivos\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m'\u001b[39m\n",
+      "File \u001b[1;32mc:\\Python311\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:504\u001b[0m, in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend, engine_kwargs)\u001b[0m\n\u001b[0;32m    502\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[0;32m    503\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m--> 504\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(\n\u001b[0;32m    505\u001b[0m         io,\n\u001b[0;32m    506\u001b[0m         storage_options\u001b[39m=\u001b[39;49mstorage_options,\n\u001b[0;32m    507\u001b[0m         engine\u001b[39m=\u001b[39;49mengine,\n\u001b[0;32m    508\u001b[0m         engine_kwargs\u001b[39m=\u001b[39;49mengine_kwargs,\n\u001b[0;32m    509\u001b[0m     )\n\u001b[0;32m    510\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[0;32m    511\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    512\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    513\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    514\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Python311\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1567\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[1;34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001b[0m\n\u001b[0;32m   1563\u001b[0m     ext \u001b[39m=\u001b[39m inspect_excel_format(\n\u001b[0;32m   1564\u001b[0m         content_or_path\u001b[39m=\u001b[39mpath_or_buffer, storage_options\u001b[39m=\u001b[39mstorage_options\n\u001b[0;32m   1565\u001b[0m     )\n\u001b[0;32m   1566\u001b[0m     \u001b[39mif\u001b[39;00m ext \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m-> 1567\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1568\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mExcel file format cannot be determined, you must specify \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1569\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39man engine manually.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1570\u001b[0m         )\n\u001b[0;32m   1572\u001b[0m engine \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39mget_option(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mio.excel.\u001b[39m\u001b[39m{\u001b[39;00mext\u001b[39m}\u001b[39;00m\u001b[39m.reader\u001b[39m\u001b[39m\"\u001b[39m, silent\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m   1573\u001b[0m \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: Excel file format cannot be determined, you must specify an engine manually."
+     ]
     }
    ],
    "source": [
@@ -277,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1211,23 +1020,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "bar() missing 1 required positional argument: 'height'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Administrador\\Documents\\Modelos Personalizados do Office\\Rafael Nery - Fundamentos de Big Data e Data Analytics com Python\\Visual Studio Code\\Aula 13 - Desafio!.ipynb Célula 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Administrador/Documents/Modelos%20Personalizados%20do%20Office/Rafael%20Nery%20-%20Fundamentos%20de%20Big%20Data%20e%20Data%20Analytics%20com%20Python/Visual%20Studio%20Code/Aula%2013%20-%20Desafio%21.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m plt\u001b[39m.\u001b[39mbar(x \u001b[39m=\u001b[39m df_contagem_cliente\u001b[39m.\u001b[39mindex, y \u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcdCliente\u001b[39m\u001b[39m'\u001b[39m, data \u001b[39m=\u001b[39m df_contagem_cliente)\n",
-      "\u001b[1;31mTypeError\u001b[0m: bar() missing 1 required positional argument: 'height'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.bar(x = df_contagem_cliente.index, y ='cdCliente', data = df_contagem_cliente)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## peso liquido total vendido por ano\n",
+    "\n",
+    "df_peso_ano = df_merge.loc[:,['Ano','Peso Liquido']] # novo dataframe com as colunas Ano e Peso liquido\n",
+    "\n",
+    "df_peso_ano = df_peso_ano.groupby('Ano').sum()"
    ]
   }
  ],
@@ -1247,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
